// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kDvujY jIUwjt"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kDvujY gAZYom"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kDvujY gLLnSh"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kDvujY drgIyo"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kDvujY gcugKi"
/>
`;
